[package]
name = "actix-web-sled"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.125"
sled = "0.34.6"
sled-extensions = { version = "0.2.0", features = ["bincode"] }
thiserror = "1.0.24"
